# controllers/orders.go
@@ -7,6 +7,7 @@ import (
 	"strings"
 	"time"
 	"transaction_service/models"
+	"transaction_service/structs/requests"
 	"transaction_service/structs/responses"
 
 	"github.com/beego/beego/v2/core/logs"
@@ -42,83 +43,101 @@ func (c *OrdersController) Post() {
 	// Request Recieved. Processing ....
 	logs.Info("Request recieved is::: ", v)
 
-	quantity_, _ := strconv.Atoi(v.TotalQuantity)
-	cost_, _ := strconv.ParseFloat(v.Cost, 32)
+	// quantity_, _ := strconv.Atoi(v.TotalQuantity)
+	quantity_ := 0
+	// cost_, _ := strconv.ParseFloat(v.Cost, 32)
+	cost_ := 0
 	currency_id, _ := strconv.ParseInt(v.Currency, 0, 64)
 	created_by, _ := strconv.ParseInt(v.CreatedBy, 0, 64)
 
 	logs.Info("Total quantity is ")
 
-	if cur, cur_err := models.GetCurrenciesById(currency_id); cur_err == nil {
-		logs.Info("Currency found")
-		var order_ = models.Orders{Quantity: quantity_, Cost: float32(cost_), Currency: cur.CurrencyId, OrderDate: time.Now(), DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: created_by, ModifiedBy: created_by}
+	if user, err := models.GetUsersById(created_by); err == nil {
+		if cur, cur_err := models.GetCurrenciesById(currency_id); cur_err == nil {
+			logs.Info("Currency found")
+			var order_ = models.Orders{Quantity: quantity_, Cost: float32(cost_), Currency: cur.CurrencyId, OrderDate: time.Now(), DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: user, ModifiedBy: created_by}
 
-		// Add order
-		if _, err := models.AddOrders(&order_); err == nil {
-			cart_items := v.Items
+			// Add order
+			if _, err := models.AddOrders(&order_); err == nil {
+				cart_items := v.Items
 
-			amount_ := float32(0.0)
+				amount_ := float32(0.0)
+				quantity_ = 0
 
-			for q, r := range cart_items {
-				logs.Info("q is ", q)
-				logs.Info("and r is ", r)
-				// item_id, _ := strconv.ParseInt(r.ItemId, 0, 64)
-				item_id := r.ItemId
-				// each_quantity_, _ := strconv.Atoi(r.Quantity)
-				each_quantity_ := r.Quantity
+				for q, r := range cart_items {
+					logs.Info("q is ", q)
+					logs.Info("and r is ", r)
+					// item_id, _ := strconv.ParseInt(r.ItemId, 0, 64)
+					item_id := r.ItemId
+					// each_quantity_, _ := strconv.Atoi(r.Quantity)
+					each_quantity_ := r.Quantity
 
-				// if item_, item_err := models.GetItemsById(item_id); item_err == nil {
-				var order_items = models.Order_items{Order: &order_, Item: item_id, Quantity: each_quantity_, OrderDate: time.Now(), DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: created_by}
+					// if item_, item_err := models.GetItemsById(item_id); item_err == nil {
+					var order_items = models.Order_items{Order: &order_, Item: item_id, Quantity: each_quantity_, OrderDate: time.Now(), DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: created_by}
 
-				// Add order item
-				if _, err := models.AddOrder_items(&order_items); err != nil {
-					logs.Error("Error adding order item::: ", err.Error())
-				} else {
-					// amount_ = float32(amount_) + float32(item_.ItemPrice.ItemPrice)
-					amount_ = float32(amount_) + float32(r.Price)
+					// Add order item
+					if _, err := models.AddOrder_items(&order_items); err != nil {
+						logs.Error("Error adding order item::: ", err.Error())
+					} else {
+						// amount_ = float32(amount_) + float32(item_.ItemPrice.ItemPrice)
+						amount_ = float32(amount_) + (float32(r.Price) * float32(r.Quantity))
+						quantity_ = quantity_ + int(each_quantity_)
+					}
+					// }
 				}
-				// }
-			}
 
-			if amount_ == 0 {
-				amount_ = float32(cost_)
-			}
+				if amount_ == 0 {
+					amount_ = float32(cost_)
+				}
 
-			logs.Info("About to move to transactions")
-			var transaction_ = models.Transactions{Order: &order_, Amount: amount_, TransactingCurrency: cur.CurrencyId, StatusId: 2, DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: int(created_by), ModifiedBy: int(created_by)}
-			logs.Info("About to add transaction")
-			if _, txn_err := models.AddTransactions(&transaction_); txn_err == nil {
-				logs.Info("NO error adding transaction")
-				status_code := "1022"
-				var txn_details = models.Transaction_details{TransactionId: &transaction_, Amount: amount_, Comment: v.Comment, StatusCode: status_code, DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: 1, ModifiedBy: 1}
+				order_.Cost = amount_
+				order_.Quantity = quantity_
 
-				if _, txn_d_err := models.AddTransaction_details((&txn_details)); txn_d_err == nil {
-					var resp = responses.TransactionResponseDTO{StatusCode: 200, Transaction: &transaction_, StatusDesc: "Order successfully placed"}
-					c.Ctx.Output.SetStatus(201)
-					c.Data["json"] = resp
+				if err := models.UpdateOrdersById(&order_); err != nil {
+					logs.Info("An error occurred when updating order")
+				}
 
+				logs.Info("About to move to transactions")
+				var transaction_ = models.Transactions{Order: &order_, Amount: amount_, TransactingCurrency: cur.CurrencyId, StatusId: 2, DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: int(created_by), ModifiedBy: int(created_by)}
+				logs.Info("About to add transaction")
+				if _, txn_err := models.AddTransactions(&transaction_); txn_err == nil {
+					logs.Info("NO error adding transaction")
+					status_code := "1022"
+					var txn_details = models.Transaction_details{TransactionId: &transaction_, Amount: amount_, Comment: v.Comment, StatusCode: status_code, DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: 1, ModifiedBy: 1}
+
+					if _, txn_d_err := models.AddTransaction_details((&txn_details)); txn_d_err == nil {
+						var resp = responses.TransactionResponseDTO{StatusCode: 200, Transaction: &transaction_, StatusDesc: "Order successfully placed"}
+						c.Ctx.Output.SetStatus(200)
+						c.Data["json"] = resp
+
+					} else {
+						var resp = models.OrderResponseDTO{StatusCode: 808, Order: nil, StatusDesc: "Transaction details error!"}
+						logs.Error("Error thrown when adding transaction details::: ", txn_d_err.Error())
+						c.Ctx.Output.SetStatus(304)
+						c.Data["json"] = resp
+					}
 				} else {
-					var resp = models.OrdersResponseDTO{StatusCode: 808, Order: nil, StatusDesc: "Transaction details error!"}
-					logs.Error("Error thrown when adding transaction details::: ", txn_d_err.Error())
+					var resp = models.OrderResponseDTO{StatusCode: 807, Order: nil, StatusDesc: "Transaction error!"}
+					logs.Error("Error thrown when adding transaction::: ", txn_err.Error())
 					c.Ctx.Output.SetStatus(304)
 					c.Data["json"] = resp
 				}
+
 			} else {
-				var resp = models.OrdersResponseDTO{StatusCode: 807, Order: nil, StatusDesc: "Transaction error!"}
-				logs.Error("Error thrown when adding transaction::: ", txn_err.Error())
+				var resp = models.OrderResponseDTO{StatusCode: 806, Order: nil, StatusDesc: "Order error!"}
+				logs.Error("Error thrown when adding order::: ", err.Error())
 				c.Ctx.Output.SetStatus(304)
 				c.Data["json"] = resp
 			}
-
 		} else {
-			var resp = models.OrdersResponseDTO{StatusCode: 806, Order: nil, StatusDesc: "Order error!"}
-			logs.Error("Error thrown when adding order::: ", err.Error())
-			c.Ctx.Output.SetStatus(304)
-			c.Data["json"] = resp
+			logs.Info("Currency received is ", v.Currency)
+			logs.Info("Currency NOT found ", cur_err.Error())
 		}
 	} else {
-		logs.Info("Currency received is ", v.Currency)
-		logs.Info("Currency NOT found ", cur_err.Error())
+		var resp = models.OrderResponseDTO{StatusCode: 809, Order: nil, StatusDesc: "Error adding order"}
+		logs.Error("Error thrown when adding order::: ", err.Error())
+		c.Ctx.Output.SetStatus(304)
+		c.Data["json"] = resp
 	}
 
 	c.ServeJSON()
@@ -160,6 +179,28 @@ func (c *OrdersController) ConfirmOrder() {
 		c.Data["json"] = resp
 	}
 
+	c.ServeJSON()
+}
+
+// Post ...
+// @Title Get User Orders
+// @Description get user orders
+// @Param	body		body 	requests.GetUserOrdersRequest	true		"body for Transactions content"
+// @Success 201 {int} models.OrdersResponseDTO
+// @Failure 403 body is empty
+// @router /get-user-orders [post]
+func (c *OrdersController) GetUserOrders() {
+	var v requests.GetUserOrdersRequest
+	json.Unmarshal(c.Ctx.Input.RequestBody, &v)
+
+	if orders, err := models.GetOrdersByUser(v.Id); err == nil {
+		logs.Debug("Item ID to get quantity is ", orders)
+		var resp = models.OrdersResponseDTO{StatusCode: 200, Orders: orders, StatusDesc: "Order details fetched successfully"}
+		c.Ctx.Output.SetStatus(200)
+		c.Data["json"] = resp
+	} else {
+		c.Data["json"] = err.Error()
+	}
 	c.ServeJSON()
 }
 
