# models/transactions.go
@@ -46,6 +46,17 @@ func GetTransactionsById(id int64) (v *Transactions, err error) {
 	return nil, err
 }
 
+// GetOrdersById retrieves Orders by Id. Returns error if
+// Id doesn't exist
+func GetTransactionsByUser(id int64) (v *[]Transactions, err error) {
+	o := orm.NewOrm()
+	v = &[]Transactions{}
+	if _, err = o.QueryTable(new(Transactions)).Filter("Order__CreatedBy__UserId", id).RelatedSel().All(v); err == nil {
+		return v, nil
+	}
+	return nil, err
+}
+
 // GetAllTransactions retrieves all Transactions matches certain condition. Returns empty list if
 // no records exist
 func GetAllTransactions(query map[string]string, fields []string, sortby []string, order []string,
