# models/users.go
@@ -1,0 +1,189 @@
+package models
+
+import (
+	"errors"
+	"fmt"
+	"reflect"
+	"strings"
+	"time"
+
+	"github.com/beego/beego/v2/client/orm"
+)
+
+type Users struct {
+	UserId        int64     `orm:"column(user_id);auto"`
+	ImagePath     string    `orm:"column(image_path);size(200);null"`
+	UserType      int       `orm:"column(user_type);null"`
+	FullName      string    `orm:"column(full_name);size(255)"`
+	Username      string    `orm:"column(username);size(40);null"`
+	Password      string    `orm:"column(password);size(255)"`
+	Email         string    `orm:"column(email);size(255);null"`
+	PhoneNumber   string    `orm:"column(phone_number);size(255);null"`
+	Gender        string    `orm:"column(gender);size(10)"`
+	Dob           time.Time `orm:"column(dob);type(datetime)"`
+	Address       string    `orm:"column(address);size(255);null"`
+	IdType        string    `orm:"column(id_type);size(5);null"`
+	IdNumber      string    `orm:"column(id_number);size(100);null"`
+	MaritalStatus string    `orm:"column(marital_status);size(20);null"`
+	Active        int       `orm:"column(active);null"`
+	IsVerified    bool      `orm:"column(is_verified);null"`
+	DateCreated   time.Time `orm:"column(date_created);type(datetime);null;auto_now_add"`
+	DateModified  time.Time `orm:"column(date_modified);type(datetime);null"`
+	CreatedBy     int       `orm:"column(created_by);null"`
+	ModifiedBy    int       `orm:"column(modified_by);null"`
+}
+
+func (t *Users) TableName() string {
+	return "users"
+}
+
+func init() {
+	orm.RegisterModel(new(Users))
+}
+
+// AddUsers insert a new Users into database and returns
+// last inserted Id on success.
+func AddUsers(m *Users) (id int64, err error) {
+	o := orm.NewOrm()
+	id, err = o.Insert(m)
+	return
+}
+
+// GetUsersById retrieves Users by username. Returns error if
+// Id doesn't exist
+func GetUsersByUsername(username string) (v *Users, err error) {
+	o := orm.NewOrm()
+	v = &Users{Email: username}
+	if err = o.QueryTable(new(Users)).Filter("Email", username).RelatedSel().One(v); err == nil {
+		return v, nil
+	}
+
+	if err = o.QueryTable(new(Users)).Filter("PhoneNumber", username).RelatedSel().One(v); err == nil {
+		return v, nil
+	}
+
+	if err = o.QueryTable(new(Users)).Filter("Username", username).RelatedSel().One(v); err == nil {
+		return v, nil
+	}
+
+	return nil, err
+}
+
+// GetUsersById retrieves Users by Id. Returns error if
+// Id doesn't exist
+func GetUsersById(id int64) (v *Users, err error) {
+	o := orm.NewOrm()
+	v = &Users{UserId: id}
+	if err = o.Read(v); err == nil {
+		return v, nil
+	}
+	return nil, err
+}
+
+// GetAllUsers retrieves all Users matches certain condition. Returns empty list if
+// no records exist
+func GetAllUsers(query map[string]string, fields []string, sortby []string, order []string,
+	offset int64, limit int64) (ml []interface{}, err error) {
+	o := orm.NewOrm()
+	qs := o.QueryTable(new(Users))
+	// query k=v
+	for k, v := range query {
+		// rewrite dot-notation to Object__Attribute
+		k = strings.Replace(k, ".", "__", -1)
+		if strings.Contains(k, "isnull") {
+			qs = qs.Filter(k, (v == "true" || v == "1"))
+		} else {
+			qs = qs.Filter(k, v)
+		}
+	}
+	// order by:
+	var sortFields []string
+	if len(sortby) != 0 {
+		if len(sortby) == len(order) {
+			// 1) for each sort field, there is an associated order
+			for i, v := range sortby {
+				orderby := ""
+				if order[i] == "desc" {
+					orderby = "-" + v
+				} else if order[i] == "asc" {
+					orderby = v
+				} else {
+					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
+				}
+				sortFields = append(sortFields, orderby)
+			}
+			qs = qs.OrderBy(sortFields...)
+		} else if len(sortby) != len(order) && len(order) == 1 {
+			// 2) there is exactly one order, all the sorted fields will be sorted by this order
+			for _, v := range sortby {
+				orderby := ""
+				if order[0] == "desc" {
+					orderby = "-" + v
+				} else if order[0] == "asc" {
+					orderby = v
+				} else {
+					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
+				}
+				sortFields = append(sortFields, orderby)
+			}
+		} else if len(sortby) != len(order) && len(order) != 1 {
+			return nil, errors.New("Error: 'sortby', 'order' sizes mismatch or 'order' size is not 1")
+		}
+	} else {
+		if len(order) != 0 {
+			return nil, errors.New("Error: unused 'order' fields")
+		}
+	}
+
+	var l []Users
+	qs = qs.OrderBy(sortFields...)
+	if _, err = qs.Limit(limit, offset).All(&l, fields...); err == nil {
+		if len(fields) == 0 {
+			for _, v := range l {
+				ml = append(ml, v)
+			}
+		} else {
+			// trim unused fields
+			for _, v := range l {
+				m := make(map[string]interface{})
+				val := reflect.ValueOf(v)
+				for _, fname := range fields {
+					m[fname] = val.FieldByName(fname).Interface()
+				}
+				ml = append(ml, m)
+			}
+		}
+		return ml, nil
+	}
+	return nil, err
+}
+
+// UpdateUsers updates Users by Id and returns error if
+// the record to be updated doesn't exist
+func UpdateUsersById(m *Users) (err error) {
+	o := orm.NewOrm()
+	v := Users{UserId: m.UserId}
+	// ascertain id exists in the database
+	if err = o.Read(&v); err == nil {
+		var num int64
+		if num, err = o.Update(m); err == nil {
+			fmt.Println("Number of records updated in database:", num)
+		}
+	}
+	return
+}
+
+// DeleteUsers deletes Users by Id and returns error if
+// the record to be deleted doesn't exist
+func DeleteUsers(id int64) (err error) {
+	o := orm.NewOrm()
+	v := Users{UserId: id}
+	// ascertain id exists in the database
+	if err = o.Read(&v); err == nil {
+		var num int64
+		if num, err = o.Delete(&Users{UserId: id}); err == nil {
+			fmt.Println("Number of records deleted in database:", num)
+		}
+	}
+	return
+}
