# structs/requests/ordersRequestDTO.go
@@ -1,0 +1,7 @@
+package requests
+
+type GetUserOrdersRequest struct {
+	Id       int64
+	FromDate string
+	ToDate   string
+}
