# structs/requests/transactionRequestDTO.go
@@ -14,3 +14,9 @@ type UpdateTransactionRequestDTO struct {
 	SenderAccountNumber    string
 	RecipientAccountNumber string
 }
+
+type GetUserTransactionsRequest struct {
+	Id       int64
+	FromDate string
+	ToDate   string
+}
